package net.renzo.userservice.model;

public enum UserRole {
    ADMIN,
    CUSTOMER
}
